feat: add get all account ids feature
