# src/main/routes/account.routes.ts
@@ -6,6 +6,7 @@ import { makeEditAccountController } from '../factories/controller/account/edit-
 import { makeGetAccountByEmailController } from '../factories/controller/account/get-account-by-email-controller.factory';
 import { auth } from '@/main/middlewares/auth';
 import { makeGetAccountByIdController } from '../factories/controller/account/get-account-by-id-controller.factory';
+import { makeGetAllAccountIdsController } from '../factories/controller/account/get-all-account-ids-controller.factory';
 
 export default (router: Router): void => {
   router.post('/signup', adaptRoute(makeSignUpController()));
@@ -13,5 +14,6 @@ export default (router: Router): void => {
   router.post('/account/check-password', adaptRoute(makeCheckAccountPasswordController()));
   router.put('/account/edit/:id', auth(), adaptRoute(makeEditAccountController()));
   router.get('/account/email', adaptRoute(makeGetAccountByEmailController()));
+  router.get('/account/all', adaptRoute(makeGetAllAccountIdsController()));
   router.get('/account/:accountId', auth(), adaptRoute(makeGetAccountByIdController()));
 };
